--- a/index.html
+++ b/index.html
@@ -1661,28 +1661,26 @@
       <ul class="pricing-features">
         <li>2 reports per month</li>
         <li>Up to 5 pages per report</li>
-        <li>Watermarked PDF export</li>
         <li>Standard template only</li>
+        <li>Standard support</li>
         <li>Basic T-Score display</li>
       </ul>
       <a href="#" class="btn-pricing btn-pricing-outline">Start Free</a>
     </div>
     <div class="pricing-card featured">
       <div class="pricing-badge">Most Popular</div>
-      <div class="pricing-tier">Pro</div>
-      <div class="pricing-price"><sup>$</sup>39</div>
+      <div class="pricing-tier">Starter</div>
+      <div class="pricing-price"><sup>$</sup>29</div>
       <div class="pricing-period">per month · billed monthly</div>
       <div class="pricing-divider"></div>
       <ul class="pricing-features">
-        <li>20 reports per month</li>
-        <li>Up to 30 pages per report</li>
-        <li>Branded PDF, no watermark</li>
+        <li>50 reports per month</li>
+        <li>Up to 10 pages per report</li>
         <li>Full template library</li>
         <li>Provenance ledger export</li>
         <li>Full T-Score breakdown</li>
-        <li>Priority generation queue</li>
       </ul>
-      <a href="#" class="btn-pricing btn-pricing-gold">Get Pro</a>
+      <a href="#" class="btn-pricing btn-pricing-gold">Get Starter</a>
     </div>
     <div class="pricing-card">
       <div class="pricing-tier">Professional</div>
@@ -1690,15 +1688,30 @@
       <div class="pricing-period">per month · billed monthly</div>
       <div class="pricing-divider"></div>
       <ul class="pricing-features">
-        <li>Unlimited reports</li>
-        <li>Unlimited pages</li>
-        <li>White-label PDF branding</li>
-        <li>API access (beta)</li>
-        <li>Report versioning & re-runs</li>
-        <li>Advanced domain guardrails</li>
-        <li>Email delivery + audit log</li>
+        <li>Everything in Starter</li>
+        <li>Custom typography</li>
+        <li>Data visualizations</li>
+        <li>Executive Summaries</li>
+        <li>Priority generation queue</li>
+        <li>Priority support</li>
       </ul>
-      <a href="#" class="btn-pricing btn-pricing-outline">Get Professional</a>
+      <a href="#" class="btn-pricing btn-pricing-outline">Get Pro</a>
+    </div>
+    <div class="pricing-card">
+      <div class="pricing-tier">Enterprise</div>
+      <div class="pricing-price">Custom</div>
+      <div class="pricing-period">Custom volume · billed monthly</div>
+      <div class="pricing-divider"></div>
+      <ul class="pricing-features">
+         <li>Everything in Pro</li>
+         <li>Unlimited reports & pages</li>
+         <li>API access (beta)</li>
+         <li>White-label PDF branding</li>
+        <li>Audit log, report versioning & re-runs</li>
+        <li>Advanced domain guardrails</li>
+        <li>Dedicated account manager</li>
+        </ul>
+      <a href="#" class="btn-pricing btn-pricing-outline">Contact Sales</a>
     </div>
   </div>
 </section>
@@ -1778,4 +1791,5 @@
 </script>
 
 </body>
+
 </html>
