--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@
     </div>
     <div class="pricing-card">
       <div class="pricing-tier">Enterprise</div>
-      <div class="pricing-price">Custom</div>
+      <div class="pricing-price" style="font-size: 42px; padding-top: 8px;">Custom</div>
       <div class="pricing-period">Custom volume · billed monthly</div>
       <div class="pricing-divider"></div>
       <ul class="pricing-features">
@@ -1793,4 +1793,5 @@
 </body>
 
 </html>
+
 
